src/assets/css/main.css
/* ... */
/* Wrapper */

	.page-wrap {
		display: -ms-flexbox;
		display: -moz-flex;
		display: -webkit-flex;
		display: -ms-flex;
		display: flex;
		-moz-flex-wrap: nowrap;
		-webkit-flex-wrap: nowrap;
		-ms-flex-wrap: nowrap;
		flex-wrap: nowrap;
		-moz-justify-content: -moz-flex-start;
		-webkit-justify-content: -webkit-flex-start;
		-ms-justify-content: -ms-flex-start;
		justify-content: flex-start;
	}

	.wrapper {
		position: relative;
	}

		.wrapper > .inner {
			margin: 0 auto;
			width: 60em;
		}

		@media screen and (max-width: 1280px) {

			.wrapper > .inner {
				width: 65em;
			}

		}

		@media screen and (max-width: 980px) {

			.wrapper > .inner {
				width: 100%;
			}

		}

/* Header */

	#header {
		font-weight: 700;
	}

	.languageToolbar {
		text-align: center;
	}


/* Menu */

	#nav {
		background: #0d1217;
		z-index: 10002;
		position: relative;
		width: 4em;
	}

		#nav ul {
			list-style: none;
			margin: 0;
			padding: 0;
			position: fixed;
			top: 1em;
			left: 0;
		}

			#nav ul li {
				padding: 0;
				width: 3.75em;
				text-align: Center;
				margin-bottom: 1em;
			}

				#nav ul li a {
					color: rgba(255, 255, 255, 0.5);
					text-decoration: none;
					font-size: 1.5em;
				}

					#nav ul li a:hover {
						color: white;
					}

					#nav ul li a.active {
						color: whitesmoke; /*#19B5FE*/
					}

				@media screen and (max-width: 736px) {

					#nav ul li {
						width: 3.4em;
					}

				}

/* Banner */

	body.is-loading #banner > .inner {
		opacity: 0;
		-moz-transform: translateY(1em);
		-webkit-transform: translateY(1em);
		-ms-transform: translateY(1em);
		transform: translateY(1em);
	}

	#banner {
		display: -ms-flexbox;
		-ms-flex-pack: center;
		-ms-flex-align: center;
		padding: 8em 0 6em 0;
		-moz-align-items: center;
		-webkit-align-items: center;
		-ms-align-items: center;
		align-items: center;
		display: -moz-flex;
		display: -webkit-flex;
		display: -ms-flex;
		display: flex;
		-moz-justify-content: center;
		-webkit-justify-content: center;
		-ms-justify-content: center;
		justify-content: center;
		min-height: 75vh;
		height: 75vh;
		position: relative;
		background: #000;
		background-image: url(../images/banner.jpg);
		background-size: cover;
		background-attachment: fixed;
		background-repeat: no-repeat;
		background-position: center;
		text-align: center;
		color: #FFF;
	}

		#banner:before {
			-moz-transition: opacity 3s ease;
			-webkit-transition: opacity 3s ease;
			-ms-transition: opacity 3s ease;
			transition: opacity 3s ease;
			-moz-transition-delay: 0.25s;
			-webkit-transition-delay: 0.25s;
			-ms-transition-delay: 0.25s;
			transition-delay: 0.25s;
			content: '';
			display: block;
			background-color: #000;
			height: 100%;
			left: 0;
			opacity: 0.65;
			position: absolute;
			top: 0;
			width: 100%;
			z-index: 1;
		}

		#banner .inner {
			-moz-transform: none;
			-webkit-transform: none;
			-ms-transform: none;
			transform: none;
			-moz-transition: opacity 1s ease, transform 1s ease;
			-webkit-transition: opacity 1s ease, transform 1s ease;
			-ms-transition: opacity 1s ease, transform 1s ease;
			transition: opacity 1s ease, transform 1s ease;
			position: relative;
			opacity: 1;
			z-index: 3;
			padding: 0 2em;
		}

		#banner h1 {
			font-size: 4em;
			line-height: 1em;
			margin: 0 0 0.5em 0;
			padding: 0;
			color: #FFF;
		}

		#banner p {
			font-size: 1.5em;
			margin-bottom: 1.75em;
		}

		#banner a {
			color: #FFF;
			text-decoration: none;
		}

		@media screen and (max-width: 1280px) {

			#banner h1 {
				font-size: 3.5em;
			}

		}

		@media screen and (max-width: 736px) {

			#banner {
				background-attachment: scroll;
			}

				#banner h1 {
					font-size: 2.25em;
				}

				#banner p {
					font-size: 1.25em;
				}

		}


		@media only screen and (max-width: 736px) {
	
			.homeMainText {
			  display: none;
			}
		}

/* Main */

	#main {
		background: #fff; /*f1f1f1*/
		width: 100%;
	}

		#main #header {
			background: #0d1217; /* #e6e6e6 */
			padding: 0; /* 1.15em 3.5em; */
			text-align: right;
		}

			#main #header h1 {
				margin: 0;
				font-size: 1em;
			}

			@media screen and (max-width: 980px) {

				#main #header {
					padding: 1.15em 2em;
				}

			}

			@media screen and (max-width: 736px) {

				#main #header {
					text-align: center;
				}

			}

/* About Me */

.flex {
	display: -ms-flexbox;
	-ms-flex-pack: justify;
	display: -moz-flex;
	display: -webkit-flex;
	display: -ms-flex;
	display: flex;
	-moz-flex-wrap: wrap;
	-webkit-flex-wrap: wrap;
	-ms-flex-wrap: wrap;
	flex-wrap: wrap;
	-moz-justify-content: space-between;
	-webkit-justify-content: space-between;
	-ms-justify-content: space-between;
	justify-content: space-between;
}

	.flex.flex-2, .flex.flex-3 {
		-moz-align-items: stretch;
		-webkit-align-items: stretch;
		-ms-align-items: stretch;
		align-items: stretch;
	}

		.flex.flex-2.center, .flex.flex-3.center {
			-moz-align-items: center;
			-webkit-align-items: center;
			-ms-align-items: center;
			align-items: center;
		}

	.flex.flex-2 .col {
		width: 48%;
	}

		.flex.flex-2 .col.col1 {
			width: 30%;
		}

		.flex.flex-2 .col.col2 {
			width: 66%;
		}

		@media screen and (max-width: 736px) {

			.flex.flex-2 .col.col1, .flex.flex-2 .col.col2 {
				width: 100%;
				margin-bottom: 2em;
			}

				.flex.flex-2 .col.col1 .image, .flex.flex-2 .col.col2 .image {
					max-width: 60%;
					margin: 0 auto 2em auto;
				}

		}

	.flex.flex-3 .col {
		width: 28%;
	}

		@media screen and (max-width: 736px) {

			.flex.flex-3 .col {
				width: 100%;
				margin-bottom: 2em;
			}

				.flex.flex-3 .col .image {
					max-width: 60%;
					margin: 0 auto 2em auto;
				}

		}

	.flex.flex-4 .col {
		width: 22%;
	}

	.flex.flex-tabs {
		-moz-flex-wrap: nowrap;
		-webkit-flex-wrap: nowrap;
		-ms-flex-wrap: nowrap;
		flex-wrap: nowrap;
	}

		.flex.flex-tabs ul {
			width: 20%;
		}

		.flex.flex-tabs .tabs {
			width: 77%;
		}
/* ... */

